# basicenv

./: .gitignore
app/: database  domain
app/api/: Dockerfile  bootstrap.sh  build.sh  docker-entrypoint.sh  requirements.txt  setup.py
app/flask/: main.py  requirements.txt  setup.py
app/grpc/: build.sh  setup.py
commander/: .gitignore  bootstrap.sh  setup.py
commands_and_events/: requirements.txt  setup.py
database/: README.md  activate_venv.sh  requirements.txt
database/alembic/: env.py
database/alembic/versions/: 30da5e205c4b_initial_db.py
database/db_scripts/: migrate.sh  new.sh  nuke.sh  revision.sh  start.sh
database/form_models/: __init__.py
database/form_models.egg-info/: PKG-INFO  SOURCES.txt
database/form_models/_database/: __init__.py  config.py  db_config.yaml  db_session.py  main.py  service_object.py
database/form_models/section/: __init__.py  models.py
domain/: .gitignore  README.md  pip.conf.bak  pyproject.toml  requirements.txt  setup.py
domain/core/: config.py
domain/core/config/: __init__.py  baseconfig.py  config.py  config.yaml
domain/core/config/baseclass/: __init__.py  config_enums.py  config_field.py  config_meta.py  config_value.py
domain/core/utils/: os_sys.py
domain/core/utils/baseclass/: __init__.py  config_loader.py  yaml_loader.py
domain/core/utils/enums/: config.py  custom_enum.py
domain/form_domain.egg-info/: PKG-INFO  SOURCES.txt
eventer/: setup.py
sdk/: requirements.txt  setup.py
services/: .gitignore  main.py  requirements.txt
services/form_services.egg-info/: PKG-INFO  SOURCES.txt
(+1 files in other folders)
