[tool.poetry]
name = "form-domain"
version = "0.1.0"
description = "Base domain subpackage for BaseEnv package"
authors = ["Craig Holland <craig_holland@hotmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
packages = [
    {include = "core"},
    {include = "testform"}
]

[tool.poetry.dependencies]
python = "^3.12"
Faker = "^25.2.0"
PyYAML = "^6.0.1"
numpy = "^1.26.4"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
flake8 = "^7.0.0"
black = "^24.4.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
